doc/windows/Delphi/64bit/single_card/gts.pas

function GT_ArcXYCOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZROverride2WN(crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZCOverride2WN(crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXROverride2WN(crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXCOverride2WN(crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRXWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCXWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRYWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCYWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRXOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCXOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRYOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCYOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufTrend(crd:SmallInt;trendSegNum:LongInt ;trendDistance:Double ;trendVelEnd:Double ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_BufIO(crd:SmallInt;doType:Word ;doMask:Word ;doValue:Word ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_BufEnableDoBitPulse(crd:SmallInt;doType:SmallInt;doIndex:SmallInt;highLevelTime:Word;lowLevelTime:Word;pulseNum:LongInt;firstLevel:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufDisableDoBitPulse(crd:SmallInt;doType:SmallInt;doIndex:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufDelay(crd:SmallInt;delayTime:Word;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufComparePulse(crd:SmallInt;level:SmallInt;outputType:SmallInt;time:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufDA(crd:SmallInt;chn:SmallInt;daValue:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLmtsOn(crd:SmallInt;axis:SmallInt;limitType:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLmtsOff(crd:SmallInt;axis:SmallInt;limitType:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetStopIo(crd:SmallInt;axis:SmallInt;stopType:SmallInt;inputType:SmallInt;inputIndex:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufMove(crd:SmallInt;moveAxis:SmallInt;pos:LongInt;vel:Double;acc:Double;modal:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufGear(crd:SmallInt;gearAxis:SmallInt;pos:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufGearPercent(crd:SmallInt;gearAxis:SmallInt;pos:LongInt;accPercent:SmallInt;decPercent:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufStopMotion(crd:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetVarValue(crd:SmallInt;pageId:SmallInt;out pVarInfo:TVarInfo;value:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufJumpNextSeg(crd:SmallInt;axis:SmallInt;limitType:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSynchPrfPos(crd:SmallInt;encoder:SmallInt;profile:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufVirtualToActual(crd:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetLongVar(crd:SmallInt;index:SmallInt;value:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetDoubleVar(crd:SmallInt;index:SmallInt;value:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_CrdStart(mask:SmallInt;optionV:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_CrdStartStep(mask:SmallInt;option:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CrdStepMode(mask:SmallInt;option:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetOverride(crd:SmallInt;synVelRatio:Double):SmallInt;stdcall;External GTDLL;
function GT_SetOverride2(crd:SmallInt;synVelRatio:Double): SmallInt; stdcall; External GTDLL;
function GT_InitLookAhead(crd:SmallInt;fifo:SmallInt;T:Double;accMax:Double;n:SmallInt;var pLookAheadBuf:TCrdData):SmallInt;stdcall;External GTDLL;
function GT_GetLookAheadSpace(crd:SmallInt;out pSpace:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetLookAheadSegCount(crd:SmallInt;out pSegCount:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_CrdClear(crd:SmallInt;fifo:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_CrdStatus(crd:SmallInt;out pRun:SmallInt;out pSegment:LongInt; fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_SetUserSegNum(crd:SmallInt;segNum:LongInt;fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_GetUserSegNum(crd:SmallInt;out pSegNum:LongInt;fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_GetUserSegNumWN(crd:SmallInt;out pSegment:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetRemainderSegNum(crd:SmallInt;out pSegNum:LongInt;fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_SetCrdStopDec(crd:SmallInt;decSmoothStop:Double;decAbruptStop:Double):SmallInt;stdcall;External GTDLL;
function GT_GetCrdStopDec(crd:SmallInt;out pDecSmoothStop:Double;out pDecAbruptStop:Double):SmallInt;stdcall;External GTDLL;
function GT_SetCrdLmtStopMode(crd:SmallInt;lmtStopMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdLmtStopMode(crd:SmallInt;out pLmtStopMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetUserTargetVel(crd:SmallInt;out pTargetVel:Double): SmallInt; stdcall; External GTDLL;
function GT_GetSegTargetPos(crd:SmallInt;out pTargetPos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdPos(crd:SmallInt;out pPos:Double):SmallInt;stdcall;External GTDLL;
function GT_GetCrdVel(crd:SmallInt;out pSynVel:Double):SmallInt;stdcall;External GTDLL;
function GT_SetCrdSingleMaxVel(crd:SmallInt;out pMaxVell:Double): SmallInt; stdcall; External GTDLL;
function GT_GetCrdSingleMaxVel(crd:SmallInt;out pMaxVell:Double): SmallInt; stdcall; External GTDLL;
function GT_GetCmdCount(crd:SmallInt;out pResult:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_BufLaserOn(crd:SmallInt;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserOff(crd:SmallInt;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserPrfCmd(crd:SmallInt;laserPower:Double;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserFollowRatio(crd:SmallInt;ratio:Double;minPower:Double;maxPower:Double;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserFollowMode(crd:SmallInt;source:SmallInt =0;fifo:SmallInt=0;channel:SmallInt=0;startPower:Double =0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserFollowOff(crd:SmallInt;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserFollowSpline(crd:SmallInt;tableId:SmallInt;minPower:Double;maxPower:Double;fifo:SmallInt=0,channel:SmallInt=0): SmallInt; stdcall; External GTDLL;

function GT_PrfPvt(profile:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_SetPvtLoop(profile:SmallInt;loop:LongInt):SmallInt;stdcall;External GTDLL;
function GT_GetPvtLoop(profile:SmallInt;out pLoopCount:LongInt;out pLoop:LongInt):SmallInt;stdcall;External GTDLL;
function GT_PvtStatus(profile:SmallInt;out pTableId:SmallInt;out pTime:Double;count:SmallInt=1):SmallInt;stdcall;External GTDLL;
function GT_PvtStart(mask:LongInt):SmallInt;stdcall;External GTDLL;
function GT_PvtTableSelect(profile:SmallInt;tableId:SmallInt):SmallInt;stdcall;External GTDLL;
